[package]
name = "emulator_6502"
version = "0.1.0"
authors = ["Garett M Cooper <coopergarettm@gmail.com>"]
edition = "2018"
description = "Rust implementation of an MOS 6502 emulator, intended to be a talking point during the interview process for my Winter 2020 co-op placement."
homepage = "https://github.com/GarettCooper/emulator_6502"
repository = "https://github.com/GarettCooper/emulator_6502"
readme = "README.md"
keywords = ["emulator", "6502", "nes"]
categories = ["emulators"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"

[features]
default = []
binary_coded_decimal = []