[package]
name = "emulator_6502"
version = "0.2.0"
authors = ["Garett Cooper"]
edition = "2018"
description = "Rust implementation of an MOS 6502 emulator, intended to be a talking point during the interview process for my Winter 2020 co-op placement."
homepage = "https://github.com/GarettCooper/emulator_6502"
repository = "https://github.com/GarettCooper/emulator_6502"
readme = "README.md"
keywords = ["emulator", "6502", "nes"]
categories = ["emulators"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

[features]
default = []
illegal_opcodes = []
binary_coded_decimal = []